--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15"
   }
 }
